--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
-    <h1>Connor's Portfolio</h1>
+    <h1>Definitely NOT Connor's Portfolio</h1>
+    <p> Seriosuly, this is not Connor's portfolio </p>
     <img src="nice.jpg"/>
 </html>
 
