--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
     <h1>Definitely NOT Connor's Portfolio</h1>
     <p> Seriosuly, this is not Connor's portfolio </p>
+    <p> It would be awfully silly of you to take a look at this repository and come to the conclusion that this IS Connor's portfolio, despite my telling you several times now that it clearly IS NOT. </p>
+  
     <img src="nice.jpg"/>
 </html>
 
