--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <p> It would be awfully silly of you to take a look at this repository and come to the conclusion that this IS Connor's portfolio 
         despite my telling you several times now that it clearly IS NOT. </p>
     <img src="nice.jpg"/>
-    <p> <span style="I'm a bit confused why you've scrolled beyond that photo. I've made it abundantly clear that this is NOT Connor's portfolio.
-        You should probably go home now ;">Here is some text.</span> </p>
+    <p> <span style="vertical-align: middle;">I'm a bit confused why you've scrolled beyond that photo. I've made it abundantly clear that this is NOT Connor's portfolio.
+        You should probably go home now.</span> </p>
+  
 </html>
 
 
