--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
     <h1>Definitely NOT Connor's Portfolio</h1>
-    <p> Seriosuly, this is not Connor's portfolio </p>
-    <p> It would be awfully silly of you to take a look at this repository and come to the conclusion that this IS Connor's portfolio 
-        despite my telling you several times now that it clearly IS NOT. </p>
+    <p> <span style="vertical-align: middle;"Seriosuly, this is not Connors portfolio.</span> </p>
+    <p> <span style="vertical-align: middle;">It would be awfully silly of you to take a look at this repository and come to the conclusion that this IS Connor's portfolio 
+        despite my telling you several times now that it clearly IS NOT.</span> </p>
     <img src="nice.jpg"/>
     <p> <span style="vertical-align: middle;">I'm a bit confused why you've scrolled beyond that photo. I've made it abundantly clear that this is NOT Connor's portfolio.
         You should probably go home now.</span> </p>
