--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@ p {
  text-align:center
 }
 </style>
+    <style>
+h1 {
+ text-align:center
+}
+</style>
     <h1>Definitely NOT Connor's Portfolio</h1>
     <p>Seriosuly, this is not Connors portfolio.</p>
     <p>It would be awfully silly of you to take a look at this repository and come to the conclusion that this IS Connor's portfolio 
