--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@ h1 {
     <h1>Definitely NOT Connor's Portfolio</h1>
     <p>Seriosuly, this is not Connors portfolio.</p>
     <p>It would be awfully silly of you to take a look at this repository and come to the conclusion that this IS Connor's portfolio 
-        despite my telling you several times now that it clearly IS NOT</p>
+        despite my telling you several times now that it clearly IS NOT. If you scroll down futher, you will find further proof of this fact.</p>
     <img src="nice.jpg"/>
-    <p>I'm a bit confused why you've scrolled beyond that photo. I've made it abundantly clear that this is NOT Connor's portfolio.
-        You should probably go home now.</p>
+    <p>Still not Connor's portfolio. Time to stop scrolling.</p>
   
 </html>
 
